# checkout

./: .gitignore  README.rst  env  manage.py  pyproject.toml  requirements.txt
checkout/: settings.py  settings_production.py  urls.py  wsgi.py
payments/: admin.py  forms.py  models.py  views.py
payments/migrations/: 0001_initial.py
static/css/: style.css
static/css/stripe/themes/: stripe.css
templates/: 404.html  base.html
templates/payments/: card.tmpl  new_payment_btn.html  paymentrequest_detail.html  paymentrequest_form.html  paymentrequest_list.html
templates/registration/: logged_out.html  login.html  password_reset_done.html  password_reset_form.html
