[tool.poetry]
name = "checkout"
version = "0.1.0"
description = ""
authors = ["fcurella <flavio.curella@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=1.11.19,<2.0"
dj-database-url = "0.4.1"
django-dotenv = "1.4.1"
django-markupfield = "1.4.0"
Markdown = "3.3.4"
docutils = "0.9"
psycopg2-binary = "^2.8.6"
pyflakes = "^2.3.1"
pytz = "^2021.1"
requests = "2.20.0"
stripe = "1.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
