[tool.poetry]
name = "checkout"
version = "0.1.0"
description = ""
authors = ["Flavio Curella <flavio.curella@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
Django = ">=1.11.19,<2.0"
dj-database-url = "0.5.0"
django-dotenv = "1.4.2"
django-markupfield = "1.4.0"
Markdown = "2.6.6"
docutils = "0.17.1"
psycopg2-binary = "^2.8.6"
pyflakes = "^2.3.1"
pytz = "^2021.1"
requests = "2.25.1"
stripe = "1.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
